--- a/bstyle-main/package.json
+++ b/bstyle-main/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "engines": {
+    "node": ">=14 <15"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
